--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node server.js",
-    "server:dev" : "nodemon server.js"
+    "start": "node server.js",
+    "server:dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongodb": "^4.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
